--- a/form.css
+++ b/form.css
@@ -1,5 +1,5 @@
 .container{
-    background-image: url(/desk.jpg);
+    background-image: url(.//desk.jpg);
     background-position: center;
     background-repeat: no-repeat;
     font-family: Georgia;
